--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Döda fallet</title>
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserratdisplay=swap" rel="stylesheet">
 </head>
 
 <body>
